--- a/streamlit/requirements.txt
+++ b/streamlit/requirements.txt
@@ -1,4 +1,8 @@
-streamlit==1.31.1
+streamlit==1.35.0
 rdflib==7.0.0
 pandas==2.1.4
 requests==2.31.0
+networkx==3.4.2
+pyvis==0.3.2
+folium==0.19.4
+streamlit_folium==0.24.0
