--- a/streamlit/requirements.txt
+++ b/streamlit/requirements.txt
@@ -1,8 +1,8 @@
-streamlit==1.35.0
-rdflib==7.0.0
-pandas==2.1.4
-requests==2.31.0
-networkx==3.4.2
-pyvis==0.3.2
 folium==0.19.4
+networkx==3.2.1
+pandas==2.2.3
+pyvis==0.3.2
+rdflib==7.1.3
+Requests==2.32.3
+streamlit==1.41.1
 streamlit_folium==0.24.0
